# mymath-lib

./: .gitignore  CMakeLists.txt  main.cpp  mymath.cpp  mymath.h
old/: mymath.h
